--- a/styles.css
+++ b/styles.css
@@ -197,3 +197,58 @@ footer {
   font-size: 16px;
   user-select: none;
 }
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #121212;
+    color: #f1f1f1;
+  }
+
+  header,
+  footer {
+    background-color: #1f1f1f;
+    color: #f1f1f1;
+  }
+
+  nav ul li a {
+    color: #f1f1f1;
+  }
+
+  nav ul li a:hover,
+  nav ul li a.active {
+    background-color: #333;
+  }
+
+  form {
+    background-color: #1e1e1e;
+    color: #f1f1f1;
+    box-shadow: 0 0 10px rgba(255,255,255,0.05);
+  }
+
+  form input[type="text"],
+  form input[type="number"],
+  form input[type="password"],
+  form textarea,
+  form select {
+    background-color: #2b2b2b;
+    border: 1px solid #444;
+    color: #fff;
+  }
+
+  fieldset {
+    border-color: #555;
+  }
+
+  legend {
+    color: #ccc;
+  }
+
+  form input[type="submit"],
+  form input[type="reset"] {
+    background-color: #444;
+  }
+
+  form input[type="submit"]:hover,
+  form input[type="reset"]:hover {
+    background-color: #666;
+  }
+}
